--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
   },
   "homepage": "https://github.com/homelyseven250/voicemod#readme",
   "dependencies": {
-    "@discordjs/opus": "github:discordjs/opus",
-    "discord.js": "^12.2.0",
-    "ffmpeg": "0.0.4",
-    "ibm-watson": "^5.6.2",
-    "sodium": "^3.0.2"
+    "discord.js": "^12.2.0"
   }
 }
