--- a/package.json
+++ b/package.json
@@ -16,4 +16,7 @@
     "url": "https://github.com/homelyseven250/voicemod/issues"
   },
   "homepage": "https://github.com/homelyseven250/voicemod#readme",
+  "dependencies": {
+    "discord.js": "^12.5.1"
+  }
 }
